Add FastAPI server

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -8,7 +8,12 @@ packages = [{include = "api_comparer_python"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.89.1"
+uvicorn = {extras = ["standard"], version = "^0.20.0"}
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.1.0"
 
 [build-system]
 requires = ["poetry-core"]
